tests/compiler/expected/output/PointerArrayDimMismatchError.shtk.txt
MODULE PointerArrayDimMismatchError.shtk
ERROR in Line 5 Col 23

    const a: int[] <- b
                      ^
Type error, did not expect int[2][2], expected int[]

PointerArrayDimMismatchError.shtk:5:22
